fix loader z-index

--- a/styles/page_styles.css
+++ b/styles/page_styles.css
@@ -744,6 +744,7 @@ input:checked + .slider:after {
     top: 20%;
     left: 0;
     right: 0;
+    z-index: 5;
 }
 
 /* Safari */
